--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@types/node": "^18.8.3",
+    "axios": "^1.2.4",
+    "cheerio": "*",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "express-winston": "^4.2.0",
+    "mongoose": "^6.9.0",
     "winston": "^3.8.2"
   }
 }
