--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "^18.8.3",
     "axios": "^1.2.4",
     "cheerio": "*",
